--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./src/assets/Asset 6.svg" type="image/svg+xml">
     <title>RickAndMorty</title>
   </head>
   <body>
